--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ languageCode: "en-us"
 title: "Liechi | 張列弛"
 theme: "hugo-lithium-theme"
 googleAnalytics: ""
-disqusShortname: "liechizhang"
+disqusShortname: "liechi-rbind-io"
 ignoreFiles: ["\\.Rmd$", "_files$", "_cache$"]
 hasCJKLanguage: true
 enableEmoji: true
