--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: "https://www.liechi.org"
+baseurl: "https://www.liechi.org/"
 relativeurls: true
 languageCode: "en-us"
 title: "Liechi | 張列弛"
